Possible fix for the main content cutting off

--- a/assets/css/main-element/main-portfolio.css
+++ b/assets/css/main-element/main-portfolio.css
@@ -7,7 +7,6 @@ main {
     height: 600px;
     margin-top: 2%;
     margin-left: 20%;
-    overflow: hidden;
     padding: 30px;
 }
 
